--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -15,6 +15,9 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": "apps/client/tsconfig.eslint.json"
+      },
       "rules": {}
     },
     {
