--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.20.13",
     "@nrwl/cypress": "15.6.0",
     "@nrwl/eslint-plugin-nx": "15.6.0",
     "@nrwl/jest": "15.6.0",
@@ -21,13 +22,16 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.6.0",
     "@nrwl/workspace": "15.6.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -41,8 +45,10 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.6.0",
+    "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
