--- a/apps/client/tsconfig.spec.json
+++ b/apps/client/tsconfig.spec.json
@@ -7,6 +7,7 @@
     "jsx": "react"
   },
   "include": [
+    "jest.setup.ts",
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
