--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.6.0",
+    "@tanstack/react-query": "^4.22.4",
+    "@trpc/client": "^10.9.0",
+    "@trpc/next": "^10.9.0",
+    "@trpc/react-query": "^10.9.0",
+    "@trpc/server": "^10.9.0",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "superjson": "^1.12.2",
+    "tslib": "^2.3.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -22,7 +29,13 @@
     "@nrwl/linter": "15.6.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.6.0",
+    "@nrwl/rollup": "15.6.0",
     "@nrwl/workspace": "15.6.0",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
+    "@swc/core": "^1.2.173",
+    "@swc/helpers": "~0.4.11",
+    "@swc/jest": "0.2.20",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
@@ -49,6 +62,7 @@
     "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
