adds api & frontend

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "superjson": "^1.12.2",
     "tslib": "^2.3.0",
     "zod": "^3.20.2"
