--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,21 +11,13 @@
     "target": "es2015",
     "module": "esnext",
     "strict": true,
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@trpc-nx/api": [
-        "libs/api/src/index.ts"
-      ]
+      "@trpc-nx/api": ["libs/api/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
